[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "MyPackage"
authors = [
    { name = "Dhruv41", email = "dhruvsharrma@gmail.com" }
]

description = "A very basic Python package"
version = "0.1.0"
dependencies = ["matplotlib", "pandas","argparse","yaml","logging", "typing"]
requires-python = ">=3.10.0"
readme = "README.md"
classifiers = [
"License :: OSI Approved :: MIT License",
]
[project.scripts]
run_analysis = "Analysis:Analysis"